--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
         <button class="prev-btn"><i class="fa-solid fa-angle-left"></i></button>
         <div class="slider">
             <div class="img-id">Image 1</div>
-            <img class="active" src="/images/arch-5826002_1280.jpg" alt="">
-            <img src="/images/beach-2836300_1280.jpg" alt=""> 
-            <img src="/images/deer-8052359_1280.jpg" alt="">
-            <img src="/images/lake-7316684_1280.jpg" alt="">
-            <img src="/images/new-york-city-106845_1280.jpg" alt="">
-            <img src="/images/yosemite-mountains-national-park-1280x1024.jpg" alt="">
-            <img src="/images/goku-ultimate-technique-mg-1280x1024.jpg" alt="">
+            <img class="active" src="imagesarch-5826002_1280.jpg" alt="">
+            <img src="imagesbeach-2836300_1280.jpg" alt=""> 
+            <img src="imagesdeer-8052359_1280.jpg" alt="">
+            <img src="imageslake-7316684_1280.jpg" alt="">
+            <img src="imagesnew-york-city-106845_1280.jpg" alt="">
+            <img src="imagesyosemite-mountains-national-park-1280x1024.jpg" alt="">
+            <img src="imagesgoku-ultimate-technique-mg-1280x1024.jpg" alt="">
         </div>
         <button class="next-btn"><i class="fa-solid fa-angle-right"></i></button>
     </div>
