Pending changes exported from your codespace

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <button class="prev-btn"><i class="fa-solid fa-angle-left"></i></button>
         <div class="slider">
             <div class="img-id">Image 1</div>
-            <img class="active" src="images/arch-5826002_1280.jpg" alt="">
-            <img src="images/beach-2836300_1280.jpg" alt=""> 
+            <img class="active" src="../Images-Slider/arch-5826002_1280.jpg" alt="">
+            <img src="../Images-Slider/beach-2836300_1280.jpg" alt=""> 
             <img src="images/deer-8052359_1280.jpg" alt="">
             <img src="images/lake-7316684_1280.jpg" alt="">
             <img src="images/new-york-city-106845_1280.jpg" alt="">
